-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 3.6.1
-
Windows 7 64 bit
- Have a couple of As and select some:
- Press Ctrl+F.
You'll see a line around your selection:
- Press A.
All the As found in your selection will be highlighted:
- In the "Replace with" edit, type B and click "Replace All".
All the found As will be replaced correctly but the selection changes:
The selection should still be the same as before replacing. In this example, all inserted Bs should be inside the line.
- resulted from
-
QTCREATORBUG-15615 Search and replace in selected text doesn't work (or isn't implemented)
-
- Closed
-