TextEditor/Replace: Keep selection even when replacing at front

QTextCursor::insertText removes the selected text and then inserts the
new text, which moves all text cursors that are at the selection start,
so manually first insert behind the selection and then remove.

Task-number: QTCREATORBUG-15623
Change-Id: I8e6e88876c59a82c50ba379506f49ceeaef38e52
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>